logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -1,12 +1,12 @@
 :root {
   /* Layout Colors */
   --color-bg-page: #f7f7f5;
-  --color-bg-footer: #eaeae6;
+  --color-bg-footer: #EAEAE6;
   --color-popover-button: #F2FBFF;
 
   /* Borders */
   --border-header-bottom: 2px solid white;
-  --border-footer-top: 1px solid lightgray;
+  --border-footer-top: 2px solid white;
   --border-side: 1px solid white;
   --border-top-accent: 2px solid #E66414;
   --border-bottom-accent: 2px solid #E66414;
@@ -71,7 +71,7 @@ header {
   position: fixed;
   top: 0;
   z-index: 100;
-  padding: 0.5rem;
+  padding:0rem;
   margin:0rem;
 
   width: 100%;
@@ -87,10 +87,16 @@ header {
   font-size: var(--font-size-sm) !important;
 }
 
+.st-key-navbar-desktop-container  {
+  padding: 0.5rem;
+}
+
 .st-key-navbar-desktop-container button p {
   color: var(--color-bg-page);
   text-shadow: var(--shadow-text-heading) !important;
 }
+
+
 
 .st-key-login-out button p {
   border: 1px solid white;
@@ -134,11 +140,16 @@ button[data-testid="stPopoverButton"] {
 .st-key-logo_mobile img {
   width: 250px;
   max-width: 250px;
+  flex-shrink: 0;
+}
+.st-key-logo_mobile {
+  flex-grow: 1;
 }
 
 button[data-testid="stPopoverButton"] {
   width: 50px;
   max-width: 50px;
+  flex-shrink: 1;
 
 }
 
